--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,12 +10,12 @@ setw -g window-status-current-style fg=white,bg=colour24
 # Status Bar Left side
 set -g status-left-length 60
 set -g status-left-style default
-set -g status-left "#h #S #( ~/.tmux/left_status.sh )"
+set -g status-left "#h #S #( ~/.config/tmux/left_status.sh )"
 
 # Status Bar Right side
 set -g status-right-length 50
 set -g status-right-style default
-set -g status-right "#( ~/.tmux/right_status.sh )"
+set -g status-right "#( ~/.config/tmux/right_status.sh )"
 
 set-option -g history-limit 9999
 
